--- a/src/app/pages/apps/listregclient/listregclient.component.html
+++ b/src/app/pages/apps/listregclient/listregclient.component.html
@@ -27,7 +27,7 @@
       
                   {{ item.client_id }}
                 </span>
-                <i-tabler name="info-circle-filled" class="icon-20 d-flex" style="margin-left: 0.2rem; color:#26c6da; cursor: pointer;" (click)="rowInfo(item)"></i-tabler>
+                <i-tabler name="info-circle-filled" class="icon-20 d-flex" style="margin-left: 0.2rem; color:#26c6da; cursor: pointer;margin: auto 0;" (click)="rowInfo(item)"></i-tabler>
               </div>
     
             </td>
