--- a/src/assets/scss/_container.scss
+++ b/src/assets/scss/_container.scss
@@ -8,7 +8,7 @@ body {
   font-family: $font-family;
   color: $textPrimary;
   font-size: 14px;
-  line-height: 1.334rem;
+  // line-height: 1.334rem;
 }
 
 html .mat-drawer-container {
