--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 // }
 
   
+// angular json style  
+// "node_modules/primeicons/primeicons.css",
