--- a/src/app/pages/apps/log-viewer/log-viewer.component.html
+++ b/src/app/pages/apps/log-viewer/log-viewer.component.html
@@ -1,116 +1,193 @@
-<div>
-    <mat-card class="cardWithShadow" style="background-color: #FAF6F0;">
-      <mat-tab-group animationDuration="0ms" #tabGroup (selectedIndexChange)="tabChanged($event)">
-  
-        <mat-tab label="Log Search" style="font-size: 20px !important;">
-          <mat-card-content class="p-24">
-  
-  
-              <div>
-                <mat-card class="cardWithShadow" style="background-color: #ffffff;">
-                  <mat-tab-group >
-                    <mat-tab label="Search Logs" style="font-size: 20px !important;" >
-        
-                      <div style="margin-top: 10px; margin-left: 10px; margin-right: 10px;">
-        
-                        <form class="m-t-24" [formGroup]="secondFormGroup">
-                          <div class="row m-t-20">
-            
-                  
-                            <div class="col-lg-2">
-                              <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Unit Name:</mat-label>
-                              <mat-form-field appearance="outline" class="w-100" color="primary">
-                                <mat-select placeholder="Select" formControlName="unitname" required>
-              
-                                  <mat-option *ngFor="let item of unitName" [value]="item.unit_id">
-                                    {{ item.unit_name }}
-                                  </mat-option>
-                                </mat-select>
-                                <mat-error *ngIf="secondFormGroup?.get('unitname')?.hasError('required')">
-                                  Unit name is required
-                                </mat-error>
-                              </mat-form-field>
-                            </div>
-                  
-                            <div class="col-lg-2">
-                              <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Clients:</mat-label>
-                              <mat-form-field appearance="outline" class="w-100" color="primary">
-                                <mat-select placeholder="Select" formControlName="clienttype" required>
-              
-                                  <mat-option *ngFor="let item of unitType" [value]="item.name">
-                                    {{ item.name }}
-                                  </mat-option>
-                                  
-                                </mat-select>
-                                <mat-error *ngIf="secondFormGroup?.get('clienttype')?.hasError('required')">
-                                  Client name is required
-                                </mat-error>
-                              </mat-form-field>
-                            </div>
-        
-                            <div class="col-lg-2">
-                              <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Logs:</mat-label>
-                              <mat-form-field appearance="outline" class="w-100" color="primary">
-                                <mat-select placeholder="Select" formControlName="logtype" required>
-              
-                                  <mat-option *ngFor="let item of logtypes" [value]="item.name">
-                                    {{ item.name }}
-                                  </mat-option>
-                                  
-                                </mat-select>
-                                <mat-error *ngIf="secondFormGroup?.get('logtype')?.hasError('required')">
-                                  Log name is required
-                                </mat-error>
-                              </mat-form-field>
-                            </div>
-        
-                            <div class="col-lg-2">
-                              <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Log start date</mat-label>
-                              <mat-form-field appearance="outline" class="w-100" color="primary">
-                                <input matInput [matDatepicker]="startDatePicker" placeholder="Start Date" formControlName="startDate">
-                                <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-                                <mat-datepicker #startDatePicker [startAt]="minDate" (dateChange)="setMinEndDate($event)"></mat-datepicker>
-                              </mat-form-field>
-                            </div>
-                            
-                            <div class="col-lg-2">
-                              <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Log End date</mat-label>
-                              <mat-form-field appearance="outline" class="w-100" color="primary">
-                                <input matInput [matDatepicker]="endDatePicker" placeholder="End Date" formControlName="endDate" [min]="minDate">
-                                <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-                                <mat-datepicker #endDatePicker></mat-datepicker>
-                              </mat-form-field>
-                            </div>
-        
-                            <div class="col-lg-2">
-                              <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block"> </mat-label>
-                              <button mat-flat-button color="primary" (click)="performSearch()" class="mat-button mat-button-lg" style="margin-top: 15px;">Search</button>
-                            </div> 
-                          </div>                  
-        
-                        </form>
-                      </div>
-                    </mat-tab>
-        
-                    <mat-tab label="Logs Summary" style="font-size: 20px !important; flex-direction: column !important;">
-            
-                    </mat-tab>
-                </mat-tab-group>
-                </mat-card>
-            
+<mat-card class=" cardWithShadow">
+  <mat-nav-list class="p-x-8" >
+    <!-- <button mat-flat-button  class="rounded m-b-2 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px; width: 150px; height: 30px;" [class.border-red]="formNo === 0"> <span class="text-primary" (click)="logstatus(0, 'search')"> <mat-icon style="margin-top: 10px 10px;">search</mat-icon> Log Search</span></button> -->
+    <button mat-flat-button class="rounded m-b-2 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px;" [class.border-red]="formNo === 0">
+      <mat-icon style="color: blue;">search</mat-icon>
+      <span class="text-primary" (click)="logstatus(0, 'search')">Log Search</span>
+    </button>
+
+    <button mat-flat-button class="rounded m-b-2 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px;" [class.border-red]="formNo === 1">
+      <mat-icon style="color: blue;">edit</mat-icon>
+      <span class="text-primary" (click)="logstatus(1, 'summary')">Logs Summary</span>
+    </button>
+
+    <button mat-flat-button class="rounded m-b-2 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px; " [class.border-red]="formNo === 2">
+      <mat-icon style="color: blue;">insert_drive_file</mat-icon>
+      <span class="text-primary" (click)="logstatus(2, 'view')">View Logs</span>
+    </button>
+
+    <!-- <button mat-flat-button  class="rounded m-b-2 bg-light-accent" style="padding: 1.3rem 1rem; margin: 0 5px; width: 150px; height: 30px;" [class.border-red]="formNo === 1"> <span class="text-accent" (click)="logstatus(1, 'summary')">Logs Summary</span></button> -->
+
+    <!-- <button mat-flat-button  class="rounded m-b-2 bg-light-accent" style="padding: 1.3rem 1rem; margin: 0 5px; width: 160px; height: 30px;" [class.border-red]="formNo === 2"> <span class="text-accent" (click)="logstatus(2, 'view')">View Logs</span></button> -->
+</mat-nav-list>
+</mat-card>
+
+<mat-card-content class="p-8 bg-white">
+  <div class="" >
+    <div *ngIf="formNo ==0">
+      <form class="m-t-1" [formGroup]="secondFormGroup">
+        <div class="row m-t-1">                
+
+          <!-- <div class="col-lg-2">
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+            <mat-label >Unit Name</mat-label>
+              <mat-select placeholder="Select" formControlName="unitname" required (selectionChange)="onUnitSelected($event.value)" style="padding-top: 1px; padding-bottom: 1px;">
+
+                <mat-option *ngFor="let item of unitName" [value]="item.unit_id">
+                  {{ item.unit_name }}
+                </mat-option>
+                
+              </mat-select>
+              <mat-error *ngIf="secondFormGroup?.get('unitname')?.hasError('required')">
+                Unit name is required
+              </mat-error>
+            </mat-form-field>
+          </div> -->
+
+          <div class="col-lg-2">
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+              <mat-label>Unit Name</mat-label>
+              <mat-select placeholder="Select" formControlName="unitname" required 
+                          (selectionChange)="onUnitSelected($event.value)" 
+                          style="padding-top: 1px; padding-bottom: 1px;">
+                <mat-option *ngFor="let item of unitName" [value]="item.unit_id">
+                  {{ item.unit_name }}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="secondFormGroup?.get('unitname')?.hasError('required')">
+                Unit name is required
+              </mat-error>
+              <!-- <mat-icon matSuffix></mat-icon> This is an empty mat-icon acting as a suffix -->
+            </mat-form-field>
           </div>
-  
-  
-          </mat-card-content>
-        </mat-tab>
-  
-        <mat-tab label="View Logs">
-  
-        </mat-tab>
-  
-  
-      </mat-tab-group>
-  
-    </mat-card>
-  
-  </div>
+
+          <div class="col-lg-2">
+            <!-- <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Clients:</mat-label> -->
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+            <mat-label>Clients</mat-label>
+              <mat-select placeholder="Select" formControlName="clienttype" required (selectionChange)="onClientSelected($event.value)">
+
+                <mat-option *ngFor="let item of unitType" [value]="item.client_id">
+                  {{ item.client_name }}
+                </mat-option>
+                
+              </mat-select>
+              <mat-error *ngIf="secondFormGroup?.get('clienttype')?.hasError('required')">
+                Client name is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="">
+              <mat-checkbox class="example-margin" style="margin-left: 1pt; margin-top: 10pt;"
+                [disabled]="!(secondFormGroup.get('unitname')?.value) || secondFormGroup.get('unitname')?.value === ''"  [checked]="use_subclients"
+                (change)="onCheckboxChange($event)">
+                Include Sub Clients
+              </mat-checkbox>
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <!-- <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Logs:</mat-label> -->
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+            <mat-label>Logs</mat-label>
+              <mat-select placeholder="Select" formControlName="logtype" required>
+
+                <mat-option *ngFor="let item of logtypes" [value]="item.name">
+                  {{ item.name }}
+                </mat-option>
+                
+              </mat-select>
+              <mat-error *ngIf="secondFormGroup?.get('logtype')?.hasError('required')">
+                Log name is required
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+         
+
+          <div class="col-lg-2">
+            <!-- <mat-label class="mat-subtitle-2 f-w-100 m-b-8 d-block">Select Date Range</mat-label> -->
+            <mat-form-field appearance="fill" class="w-100" >
+              <mat-label>Select Date Range</mat-label>
+              <mat-date-range-input [rangePicker]="picker">
+                <input matStartDate #start placeholder="Start date" formControlName="startDate">
+                <input matEndDate #end placeholder="End date" formControlName="endDate">
+              </mat-date-range-input>
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-date-range-picker #picker>
+                <mat-date-range-picker-actions>
+                  <button mat-button matDateRangePickerCancel>Cancel</button>
+                  <button
+                    mat-raised-button
+                    color="primary"
+                    matDateRangePickerApply
+                  >
+                    Apply
+                  </button>
+                </mat-date-range-picker-actions>
+              </mat-date-range-picker>
+            </mat-form-field>
+            <!-- <mat-form-field appearance="fill" class="example-form-field">
+              <mat-label>Enter a date range</mat-label>
+              <mat-date-range-input [rangePicker]="rangePicker">
+                <input
+                  class="form-control"
+                  id="startDate"
+                  formControlName="startDate"
+                  matStartDate
+                  placeholder="Start date"
+                />
+                <input
+                  class="form-control"
+                  id="endDate"
+                  formControlName="endDate"
+                  matEndDate
+                  placeholder="End date"
+                />
+              </mat-date-range-input>
+              <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="rangePicker"
+              ></mat-datepicker-toggle>
+              <mat-date-range-picker #rangePicker>
+                <mat-date-range-picker-actions>
+                  <button mat-button matDateRangePickerCancel>Cancel</button>
+                  <button
+                    mat-raised-button
+                    color="primary"
+                    matDateRangePickerApply
+                  >
+                    Apply
+                  </button>
+                </mat-date-range-picker-actions>
+              </mat-date-range-picker>
+            </mat-form-field> -->
+          
+          </div>
+
+          <div class="col-lg-2">
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block"> </mat-label>
+            <button mat-flat-button color="primary" (click)="performSearch()" class="mat-button mat-button-lg" style="margin-top: 15px;">Search</button>
+          </div> 
+
+          <!-- <div class="col-lg-2">
+            <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block"> </mat-label>
+            <button mat-flat-button color="primary" (click)="resetsearch()" class="mat-button mat-button-lg" style="margin-top: 15px;">Search</button>
+          </div>  -->
+
+        </div>                  
+
+      </form>
+    </div>
+    <div *ngIf="formNo ==1"> <p>logs summary page</p>
+
+    </div>
+    <div *ngIf="formNo ==2"> <p>View logs page</p>
+
+    </div>
+
+  </div>  
+</mat-card-content>
