--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.scss
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.scss
@@ -1,7 +1,19 @@
-
-
 .mat-mdc-card{
 
     max-width: 290px;
     margin-right: 14px;
 }
+
+.progress-bar {
+    width: 100%;
+    background-color: #ccc;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+  
+  .progress {
+    height: 100%;
+    // background-color: #ffb22b; /* Change this to your desired color */
+  }
+
+  
